@startuml Sistema_Academia

skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam shadowing false
skinparam monochrome true

' ============ CLASSES PRINCIPAIS ============

class Gerenciador {
  -alunos: vector<Aluno>
  -professores: vector<Professor>
  -planos: vector<shared_ptr<Plano>>
  -aulas: vector<shared_ptr<Aula>>
  -equipamentos: vector<Equipamento>
  -academias: vector<Academia>
  --
  +adicionarAluno(Aluno)
  +removerAluno(matricula)
  +listarAlunos()
  +adicionarProfessor(Professor)
  +removerProfessor(id)
  +adicionarPlano(Plano)
  +adicionarAula(Aula)
  +adicionarEquipamento(Equipamento)
}

abstract class Pessoa {
  -id: int
  -nome: string
  -telefone: string
  --
  +getId(): size_t
  +getNome(): string
  +getTelefone(): string
  +setNome(string)
  +setTelefone(string)
  {abstract} +exibir(ostream)
}

class Professor {
  -especialidade: string
  --
  +getEspecialidade(): string
  +setEspecialidade(string)
  +exibir(ostream)
}

class Aluno {
  -matricula: int
  -plano: Plano*
  -treinos: vector<Treino>
  --
  +getMatricula(): int
  +setPlano(Plano*)
  +adicionarTreino(Treino)
  +getTreinos(): vector<Treino>
  +exibir(ostream)
}

class Treinador {
  -especialidade: string
  --
  +adicionarAluno(Aluno)
  +removerAluno(string)
  +listarAlunos()
}

abstract class Plano {
  #descricao: string
  #valor: double
  #id: int
  --
  +getDescricao(): string
  +getValor(): double
  +setDescricao(string)
  +setValor(double)
  {abstract} +calcularValor(): double
}

class PlanoPersonalizado {
  -id: int
  --
  +calcularValor(): double
}

class Aula {
  -nome: string
  -professor: Professor*
  --
  +getNome(): string
  +getProfessor(): Professor*
  +setProfessor(Professor*)
}

class Modalidade {
  -nome: string
  --
  +getNome(): string
  +setNome(string)
}

class Treino {
  -nome: string
  -data: string
  -equipamentos: vector<Equipamento>
  --
  +getNome(): string
  +getData(): string
  +adicionarEquipamento(Equipamento)
  +getEquipamentos(): vector<Equipamento>
}

class Equipamento {
  -id: int
  -nome: string
  -quantidade: int
  --
  +getNome(): string
  +getQuantidade(): int
  +setQuantidade(int)
}

class Exercicio {
  -nome: string
  -grupoMuscular: string
  --
  +getNome(): string
  +getGrupoMuscular(): string
}

' ============ RELACIONAMENTOS ============

Gerenciador "1" o-- "*" Aluno : gerencia
Gerenciador "1" o-- "*" Professor : gerencia
Gerenciador "1" o-- "*" Plano : gerencia
Gerenciador "1" o-- "*" Equipamento : gerencia

Treinador "1" --> "*" Aluno : gerencia
Treinador "1" --> "*" Modalidade : ministra

Pessoa <|-- Professor
Pessoa <|-- Aluno
Pessoa <|-- Treinador

Aluno "1" --> "0..1" Plano : possui
Aluno "*" --> "*" Aula : participa
Aluno "1" *-- "*" Treino : possui

Plano <|-- PlanoPersonalizado

Professor "1" --> "*" Aula : leciona

Treino "*" o-- "*" Equipamento : utiliza
Treino "*" o-- "*" Exercicio : contém

@enduml
